feat: Enhance Blob Log Tailer with integrated options and improved UI
- Updated README.md to reflect new features and installation instructions.
- Refactored content.css to improve layout and styling of header, tabs, and panels.
- Enhanced content.js with integrated options for highlighting rules and improved navigation.
- Removed standalone options.html and options.js, consolidating functionality into the main viewer.
- Updated manifest.json to version 1.1.0 and adjusted permissions.
- Improved user experience with persistent settings and real-time updates in the log viewer.

--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "Blob Log Tailer",
-  "version": "1.0.0",
-  "description": "Tail para logs en Azure Blob: auto-refresh, filtro persistente y resaltado.",
+  "version": "1.1.0",
+  "description": "Tail para logs en Azure Blob: auto-refresh, filtro persistente, resaltado y opciones integradas.",
   "permissions": ["storage"],
   "host_permissions": [
     "https://*.blob.core.windows.net/*"
@@ -14,6 +14,5 @@
       "css": ["content.css"],
       "run_at": "document_idle"
     }
-  ],
-  "options_page": "options.html"
+  ]
 }
