feat: Update manifest to version 1.3.0; add search history feature and enhance UI in content files

--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,25 @@
 {
   "manifest_version": 3,
   "name": "Blob Log Tailer",
-  "version": "1.2.0",
-  "description": "Tail para logs en Azure Blob: auto-refresh, filtro persistente, resaltado y opciones integradas.",
-  "permissions": ["storage"],
+  "version": "1.3.0",
+  "description": "Tail para logs en Azure Blob: auto-refresh, filtro persistente, resaltado, opciones integradas y historial de búsquedas.",
+  "permissions": [
+    "storage"
+  ],
   "host_permissions": [
     "https://*.blob.core.windows.net/*"
   ],
   "content_scripts": [
     {
-      "matches": ["https://*.blob.core.windows.net/*"],
-      "js": ["content.js"],
-      "css": ["content.css"],
+      "matches": [
+        "https://*.blob.core.windows.net/*"
+      ],
+      "js": [
+        "content.js"
+      ],
+      "css": [
+        "content.css"
+      ],
       "run_at": "document_idle"
     }
   ]
