--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "Blob Log Tailer",
-  "version": "1.3.0",
-  "description": "Tail para logs en Azure Blob: auto-refresh, filtro persistente, resaltado, opciones integradas y historial de búsquedas.",
+  "version": "1.4.0",
+  "description": "Visor de logs en Azure Blob con auto-refresh, filtros, resaltado y optimización de descarga.",
   "permissions": [
     "storage"
   ],
